[gd_scene load_steps=19 format=2]

[ext_resource path="res://ui/Game/ControllerHelper/ControllerHelper.gd" type="Script" id=1]
[ext_resource path="res://ui/Icons/Xbox/XboxOne_Left_Stick.png" type="Texture" id=2]
[ext_resource path="res://fonts/neuropol.tres" type="DynamicFont" id=3]
[ext_resource path="res://ui/Icons/Xbox/XboxOne_A.png" type="Texture" id=4]
[ext_resource path="res://ui/Icons/Xbox/XboxOne_Y.png" type="Texture" id=5]
[ext_resource path="res://ui/Icons/Xbox/XboxOne_X.png" type="Texture" id=6]
[ext_resource path="res://ui/Icons/Xbox/XboxOne_RT.png" type="Texture" id=7]
[ext_resource path="res://ui/Icons/Xbox/XboxOne_LT.png" type="Texture" id=8]
[ext_resource path="res://ui/Icons/Xbox/XboxOne_Menu.png" type="Texture" id=9]
[ext_resource path="res://ui/Icons/Keyboard/Keyboard_White_D.png" type="Texture" id=10]
[ext_resource path="res://ui/Icons/Keyboard/Keyboard_White_Q.png" type="Texture" id=11]
[ext_resource path="res://ui/Icons/Keyboard/Keyboard_White_Space.png" type="Texture" id=12]
[ext_resource path="res://ui/Icons/Keyboard/Keyboard_White_R.png" type="Texture" id=13]
[ext_resource path="res://ui/Icons/Keyboard/Keyboard_White_E.png" type="Texture" id=14]
[ext_resource path="res://ui/Icons/Keyboard/Keyboard_White_Mouse_Left.png" type="Texture" id=15]
[ext_resource path="res://ui/Icons/Keyboard/Keyboard_White_Mouse_Right.png" type="Texture" id=16]
[ext_resource path="res://ui/Icons/Keyboard/Keyboard_White_M.png" type="Texture" id=17]
[ext_resource path="res://ui/Icons/Keyboard/Keyboard_White_I.png" type="Texture" id=18]

[node name="ControllerHelper" type="VBoxContainer"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -314.0
margin_top = -210.0
margin_right = -16.0
margin_bottom = 267.0
script = ExtResource( 1 )

[node name="MoveGamepad" type="HBoxContainer" parent="."]
editor/display_folded = true
margin_right = 298.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )

[node name="TextureRect" type="TextureRect" parent="MoveGamepad"]
margin_right = 30.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
texture = ExtResource( 2 )
expand = true

[node name="Label" type="Label" parent="MoveGamepad"]
margin_left = 34.0
margin_top = 7.0
margin_right = 298.0
margin_bottom = 22.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "label_move"

[node name="JumpGamepad" type="HBoxContainer" parent="."]
editor/display_folded = true
margin_top = 34.0
margin_right = 298.0
margin_bottom = 64.0
rect_min_size = Vector2( 0, 30 )

[node name="TextureRect" type="TextureRect" parent="JumpGamepad"]
margin_right = 30.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
texture = ExtResource( 4 )
expand = true

[node name="Label" type="Label" parent="JumpGamepad"]
margin_left = 34.0
margin_top = 7.0
margin_right = 298.0
margin_bottom = 22.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "label_jump_jetpack"

[node name="UnsheatheGamepad" type="HBoxContainer" parent="."]
editor/display_folded = true
margin_top = 68.0
margin_right = 298.0
margin_bottom = 98.0
rect_min_size = Vector2( 0, 30 )

[node name="TextureRect" type="TextureRect" parent="UnsheatheGamepad"]
margin_right = 30.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
texture = ExtResource( 5 )
expand = true

[node name="Label" type="Label" parent="UnsheatheGamepad"]
margin_left = 34.0
margin_top = 7.0
margin_right = 298.0
margin_bottom = 22.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "label_unsheathe"

[node name="UseGamepad" type="HBoxContainer" parent="."]
editor/display_folded = true
margin_top = 102.0
margin_right = 298.0
margin_bottom = 132.0
rect_min_size = Vector2( 0, 30 )

[node name="TextureRect" type="TextureRect" parent="UseGamepad"]
margin_right = 30.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
texture = ExtResource( 6 )
expand = true

[node name="Label" type="Label" parent="UseGamepad"]
margin_left = 34.0
margin_top = 7.0
margin_right = 298.0
margin_bottom = 22.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "label_use_object"

[node name="ShootGamepad" type="HBoxContainer" parent="."]
editor/display_folded = true
margin_top = 136.0
margin_right = 298.0
margin_bottom = 166.0
rect_min_size = Vector2( 0, 30 )

[node name="TextureRect" type="TextureRect" parent="ShootGamepad"]
margin_right = 30.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
texture = ExtResource( 7 )
expand = true

[node name="Label" type="Label" parent="ShootGamepad"]
margin_left = 34.0
margin_top = 7.0
margin_right = 298.0
margin_bottom = 22.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "label_shoot"

[node name="ShieldGamepad" type="HBoxContainer" parent="."]
editor/display_folded = true
margin_top = 170.0
margin_right = 298.0
margin_bottom = 200.0
rect_min_size = Vector2( 0, 30 )

[node name="TextureRect" type="TextureRect" parent="ShieldGamepad"]
margin_right = 30.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
texture = ExtResource( 8 )
expand = true

[node name="Label" type="Label" parent="ShieldGamepad"]
margin_left = 34.0
margin_top = 7.0
margin_right = 298.0
margin_bottom = 22.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "label_shield"

[node name="MenuGamepad" type="HBoxContainer" parent="."]
margin_top = 204.0
margin_right = 298.0
margin_bottom = 234.0
rect_min_size = Vector2( 0, 30 )

[node name="TextureRect" type="TextureRect" parent="MenuGamepad"]
margin_right = 30.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
texture = ExtResource( 9 )
expand = true

[node name="Label" type="Label" parent="MenuGamepad"]
margin_left = 34.0
margin_top = 7.0
margin_right = 298.0
margin_bottom = 22.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "label_menus"

[node name="MoveKeyboard" type="HBoxContainer" parent="."]
editor/display_folded = true
margin_top = 238.0
margin_right = 298.0
margin_bottom = 268.0
rect_min_size = Vector2( 0, 30 )

[node name="TextureRect2" type="TextureRect" parent="MoveKeyboard"]
margin_right = 30.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
texture = ExtResource( 10 )
expand = true

[node name="TextureRect3" type="TextureRect" parent="MoveKeyboard"]
margin_left = 34.0
margin_right = 64.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
texture = ExtResource( 11 )
expand = true

[node name="Label" type="Label" parent="MoveKeyboard"]
margin_left = 68.0
margin_top = 7.0
margin_right = 298.0
margin_bottom = 22.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "label_move"

[node name="JumpKeyboard" type="HBoxContainer" parent="."]
editor/display_folded = true
margin_top = 272.0
margin_right = 298.0
margin_bottom = 302.0
rect_min_size = Vector2( 0, 30 )

[node name="TextureRect" type="TextureRect" parent="JumpKeyboard"]
margin_right = 30.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
texture = ExtResource( 12 )
expand = true

[node name="Label" type="Label" parent="JumpKeyboard"]
margin_left = 34.0
margin_top = 7.0
margin_right = 298.0
margin_bottom = 22.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "label_jump_jetpack"

[node name="UnsheatheKeyboard" type="HBoxContainer" parent="."]
editor/display_folded = true
margin_top = 306.0
margin_right = 298.0
margin_bottom = 336.0
rect_min_size = Vector2( 0, 30 )

[node name="TextureRect" type="TextureRect" parent="UnsheatheKeyboard"]
margin_right = 30.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
texture = ExtResource( 13 )
expand = true

[node name="Label" type="Label" parent="UnsheatheKeyboard"]
margin_left = 34.0
margin_top = 7.0
margin_right = 298.0
margin_bottom = 22.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "label_unsheathe"

[node name="UseKeyboard" type="HBoxContainer" parent="."]
editor/display_folded = true
margin_top = 340.0
margin_right = 298.0
margin_bottom = 370.0
rect_min_size = Vector2( 0, 30 )

[node name="TextureRect" type="TextureRect" parent="UseKeyboard"]
margin_right = 30.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
texture = ExtResource( 14 )
expand = true

[node name="Label" type="Label" parent="UseKeyboard"]
margin_left = 34.0
margin_top = 7.0
margin_right = 298.0
margin_bottom = 22.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "label_use_object"

[node name="ShootKeyboard" type="HBoxContainer" parent="."]
editor/display_folded = true
margin_top = 374.0
margin_right = 298.0
margin_bottom = 404.0
rect_min_size = Vector2( 0, 30 )

[node name="TextureRect" type="TextureRect" parent="ShootKeyboard"]
margin_right = 30.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
texture = ExtResource( 15 )
expand = true

[node name="Label" type="Label" parent="ShootKeyboard"]
margin_left = 34.0
margin_top = 7.0
margin_right = 298.0
margin_bottom = 22.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "label_shoot"

[node name="ShieldKeyboard" type="HBoxContainer" parent="."]
editor/display_folded = true
margin_top = 408.0
margin_right = 298.0
margin_bottom = 438.0
rect_min_size = Vector2( 0, 30 )

[node name="TextureRect" type="TextureRect" parent="ShieldKeyboard"]
margin_right = 30.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
texture = ExtResource( 16 )
expand = true

[node name="Label" type="Label" parent="ShieldKeyboard"]
margin_left = 34.0
margin_top = 7.0
margin_right = 298.0
margin_bottom = 22.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "label_shield"

[node name="MenuKeyboard" type="HBoxContainer" parent="."]
margin_top = 442.0
margin_right = 298.0
margin_bottom = 472.0
rect_min_size = Vector2( 0, 30 )

[node name="TextureRect" type="TextureRect" parent="MenuKeyboard"]
margin_right = 30.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
texture = ExtResource( 17 )
expand = true

[node name="TextureRect2" type="TextureRect" parent="MenuKeyboard"]
margin_left = 34.0
margin_right = 64.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
texture = ExtResource( 18 )
expand = true

[node name="Label" type="Label" parent="MenuKeyboard"]
margin_left = 68.0
margin_top = 7.0
margin_right = 298.0
margin_bottom = 22.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "label_menus"
